--- a/spring-hibernate-customer-tracker-with-maven-all-java-config/src/main/resources/persistence-mysql.properties
+++ b/spring-hibernate-customer-tracker-with-maven-all-java-config/src/main/resources/persistence-mysql.properties
@@ -2,7 +2,7 @@
 # JDBC connection properties
 #
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/web_customer_tracker?useSSL=false&serverTimezone=UTC
+jdbc.url=jdbc:mysql://localhost:3306/web_customer_tracker?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 jdbc.user=springstudent
 jdbc.password=springstudent
 
